[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
name = "mx-xkcd-ng"
version = "0.1.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.10"
futures = "0.1"
futures-await = "0.1"
glitch-in-the-matrix = "0.13"
gm-boilerplate = "0.1"
hyper = "0.11"
image = "0.17"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
tokio-timer = "0.1.2"
