[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
name = "mx-xkcd-ng"
version = "0.1.0"

[dependencies]
dotenv = "0.10"
failure = "0.1.1"
futures = "0.1"
futures-await = "0.1"
hyper = "0.11"
image = "0.17"
lazy_static = "1.0.1"
regex = "1.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.2.8"
tokio-core = "0.1"
tokio-timer = "0.1.2"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.glitch-in-the-matrix]
branch = "develop"
git = "https://github.com/eeeeeta/glitch-in-the-matrix"
